--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Surgi-World Quotation System - Login</title>
   <link rel="stylesheet" href="login.css" />
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/axios@1.9.0/dist/axios.min.js"></script>
 </head>
 <body>
@@ -44,6 +46,7 @@
   </div>
 
   <script src="index.js"></script>
+
   <a href="home.html"></a>
 </body>
 </html>
