--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quotation System</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.9.0/dist/axios.min.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
@@ -37,11 +40,11 @@
       <div class="form-row">
         <div class="form-group">
           <label>Regular Price</label>
-          <input type="number" step="0.01" id="regular-price" required>
+          <input type="number" id="regular-price" required>
         </div>
         <div class="form-group">
           <label>Special Price</label>
-          <input type="number" step="0.01" id="special-price" required>
+          <input type="number"  id="special-price" required>
         </div>
         <div class="form-group">
           <label>Price Type</label>
@@ -185,7 +188,14 @@
 
   <!-- Final Quotation Popup -->
   <div id="finalQuotationPopup" class="popup" style="display:none;">
-    <div class="popup-content" style="width: 90%; max-width: 900px;">
+    <div class="popup-content" style="max-height: 100vh;
+    overflow-y: auto;
+    padding: 20px;
+    background: white;
+    max-width:900px;
+    width:90%;
+    border-radius: 8px;
+    box-sizing: border-box;">
       <p style="text-align: left;margin-bottom:10px ;font-size:12px;">QUOTATION</p>
       <img src="images/rao.png" style="width: 200px; height: auto; margin-bottom: 10px;" >
       <div style="margin-bottom: 10px; text-align: left; font-size: 14px;">
